--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>LLM-driven Indoor Scene Layout Generation via Scaled Human-aligned Data Synthesis and Multi-Stage Preference Optimization</title>
+  <title>OptiScene & 3D-SynthPlace</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -190,127 +190,114 @@
 </section>
 <!-- End moved video -->
 
+
+
+
+<section class="hero is-small is-light">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <!-- Paper video. -->
+      <!-- <h2 class="title is-3">Video Presentation</h2> -->
+      <!-- How OptiScene Works 图示 -->
+<div style="text-align:center; margin-top: 2em;">
+  <h2 style="text-align:center; font-weight:bold; letter-spacing:2px; font-size:1.5em;">
+    How OptiScene works?
+  </h2>
+  <!-- <a href="static/images/how_optiscene_works.png" target="_blank"> -->
+    <img src="static/images/main_cropped.pdf" alt="How OptiScene Works?" style="max-width:100%; height:auto; margin-top:1em;">
+  <!-- </a>   -->
+</div>
+
+<!-- Data distribution analysis 图示 -->
+<div style="text-align:center; margin-top: 2em;">
+  <h2 style="font-weight:bold; text-align:center; font-size:1.5em;">
+    Data distribution analysis of 3D-SynthPlace.
+  </h2>
+  <!-- <a href="static/images/dataset.pdf" target="_blank"> -->
+    <img src="static/images/dataset.pdf" alt="Data distribution analysis of 3D-SynthPlace" style="max-width:100%; height:auto; margin-top:1em;">
+  <!-- </a> -->
+</div>
+    </div>
+  </div>
+</section>
+<!-- Results -->
+<div style="text-align:center; margin:auto; margin-top: 2em;", class="container is-max-widescreen">
+  <h2 style="font-weight:bold; text-align:center; font-size:1.5em;">
+    Quantitative comparison with other methods
+  </h2>
+    <h2 class="content; text-align:left;">
+      Comparison with [FID ↓ / OOR ↓] across 3D-Front \& 3D-SynthPlace.
+    </h2>
+  <!-- <a href="static/images/Q1result.jpg" target="_blank"> -->
+    <img src="static/images/Q1result.jpg" alt="Quantitative comparison with other methods" style="max-width:100%; height:auto; margin-top:1em;">
+  <!-- </a> -->
+</div>
+
+<div style="text-align:center; margin:auto; margin-top: 2em;", class="container is-max-widescreen">
+
+    <h2 class="content; text-align:left;">
+      Comparison with GPT-[Func ↑ / Layout ↑ /Aes. ↑] on 3D-Front \& 3D-SynthPlace.
+    </h2>
+  <!-- <a href="static/images/Q2result.jpg" target="_blank"> -->
+    <img src="static/images/Q2result.jpg" alt="Quantitative comparison with other methods" style="max-width:100%; height:auto; margin-top:1em;">
+  <!-- </a> -->
+</div>
+
+<div style="text-align:center; margin:auto; margin-top: 2em;", class="container is-max-widescreen">
+  <h2 style="font-weight:bold; text-align:center; font-size:1.5em;">
+    Qualitative comparison with other methods.
+  </h2>
+    <h2 class="content; text-align:left;">
+
+    </h2>
+  <!-- <a href="static/images/Q1result.jpg" target="_blank"> -->
+    <img src="static/images/quan_results.pdf" alt="Qualitative comparison with other methods" style="max-width:100%; height:auto; margin-top:1em;">
+  <!-- </a> -->
+</div>
+
 <!-- Image carousel -->
 <section class="hero is-small">
   <div class="hero-body">
-    <div class="container">
+    <div class="container has-text-centered">
+      <h2 style="font-weight:bold; text-align:center; font-size:1.5em;">
+        More qualitative results.
+      </h2>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          First image description.
-        </h2>
+        <img src="static/images/moreresult1_cropped.pdf" alt="MY ALT TEXT"/>
+
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
+        <img src="static/images/moreresult2_cropped.pdf" alt="MY ALT TEXT"/>
+        <!-- <h2 class="subtitle has-text-centered">
           Second image description.
-        </h2>
+        </h2> -->
       </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Third image description.
-       </h2>
-     </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
-    </div>
-  </div>
 </div>
 </div>
 </section>
+
+
+
+
 <!-- End image carousel -->
 
 
 
-
-<!-- Youtube video -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <!-- Paper video. -->
-      <h2 class="title is-3">Video Presentation</h2>
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          
-          <div class="publication-video">
-            <!-- Youtube embed code here -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End youtube video -->
-
-
-<!-- Video carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End video carousel -->
-
-
-
-
-
-
-<!-- Paper poster -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title">Poster</h2>
-
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
-          </iframe>
-        
-      </div>
-    </div>
-  </section>
-<!--End paper poster -->
 
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
     <div class="container is-max-widescreen content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@article{yang2025llm,
+        title={LLM-driven Indoor Scene Layout Generation via Scaled Human-aligned Data Synthesis and Multi-Stage Preference Optimization},
+        author={Yang, Yixuan and Luo, Zhen and Ding, Tongsheng and Lu, Junru and Gao, Mingqi and Yang, Jinyu and Sanchez, Victor and Zheng, Feng},
+        journal={arXiv preprint arXiv:2506.07570},
+        year={2025}
+      }</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
