--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <section class="hero teaser">
   <div class="container is-max-widescreen">
     <div class="hero-body">
-      <img src="static/images/teaser_cropped.pdf" alt="Paper Cover" style="width:100%;max-width:1200px;display:block;margin:auto;">
+      <img src="static/images/teaser_cropped.png" alt="Paper Cover" style="width:100%;max-width:1200px;display:block;margin:auto;">
       <h2 class="content">
         Overview of proposed <b>3D-SynthPlace</b> dataset and <b>OptiScene</b> framework for indoor layout generation.
         (Left): We propose 3D-SynthPlace, a large-scale, high-quality indoor layout dataset.
@@ -204,7 +204,7 @@
     How OptiScene works?
   </h2>
   <!-- <a href="static/images/how_optiscene_works.png" target="_blank"> -->
-    <img src="static/images/main_cropped.pdf" alt="How OptiScene Works?" style="max-width:100%; height:auto; margin-top:1em;">
+    <img src="static/images/main_cropped.png" alt="How OptiScene Works?" style="max-width:100%; height:auto; margin-top:1em;">
   <!-- </a>   -->
 </div>
 
@@ -214,7 +214,7 @@
     Data distribution analysis of 3D-SynthPlace.
   </h2>
   <!-- <a href="static/images/dataset.pdf" target="_blank"> -->
-    <img src="static/images/dataset.pdf" alt="Data distribution analysis of 3D-SynthPlace" style="max-width:100%; height:auto; margin-top:1em;">
+    <img src="static/images/dataset.png" alt="Data distribution analysis of 3D-SynthPlace" style="max-width:100%; height:auto; margin-top:1em;">
   <!-- </a> -->
 </div>
     </div>
@@ -251,7 +251,7 @@
 
     </h2>
   <!-- <a href="static/images/Q1result.jpg" target="_blank"> -->
-    <img src="static/images/quan_results.pdf" alt="Qualitative comparison with other methods" style="max-width:100%; height:auto; margin-top:1em;">
+    <img src="static/images/quan_results.png" alt="Qualitative comparison with other methods" style="max-width:100%; height:auto; margin-top:1em;">
   <!-- </a> -->
 </div>
 
@@ -265,12 +265,12 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/moreresult1_cropped.pdf" alt="MY ALT TEXT"/>
+        <img src="static/images/moreresult1_cropped.png" alt="MY ALT TEXT"/>
 
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/moreresult2_cropped.pdf" alt="MY ALT TEXT"/>
+        <img src="static/images/moreresult2_cropped.png" alt="MY ALT TEXT"/>
         <!-- <h2 class="subtitle has-text-centered">
           Second image description.
         </h2> -->
