--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">LLM-driven Indoor Scene Layout Generation via Scaled Human-aligned Data Synthesis and Multi-Stage Preference Optimization</h1>
+            <h1 class="title is-3 publication-title">NeurIPS 2025</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">Yixuan Yang<sup>1,3*</sup>,</span>
