--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
 
             <!-- Github link -->
             <span class="link-block">
-              <a href="https://github.com/YOUR REPO HERE" target="_blank"
+              <a href="https://huggingface.co/datasets/B3rrYang/3D-SynthPlace_indoor_scenes_dataset" target="_blank"
               class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
                 <i class="fab fa-github"></i>
               </span>
-              <span>Dataset (Coming Soon)</span>
+              <span>Dataset</span>
             </a>
           </span>
 
